# secex-rs

./: .gitignore  Cargo.toml  Makefile  README.md  download-firecracker.sh  run-firecracker.sh  vm_config.json  vm_config_template.json
crates/init/: Cargo.toml
crates/init/src/: main.rs  messaging.rs  mounts.rs
crates/orchestrator/: .gitignore  Cargo.toml  get-resources.sh  vm_config_template.json
crates/orchestrator/scripts/: create-payload-disk.sh  start-vm.sh
crates/orchestrator/src/: firecracker.rs  lib.rs  main.rs  network.rs  vm.rs  vm_handle.rs  vm_store.rs  vsock.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  tar.rs
rootfs/: Dockerfile
src/: main.rs  network.rs
tools/: build-rootfs-image.sh  download-kernel.sh
workspace/: run.sh  test.py
