[package]
name = "orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
macaddr = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-vsock = "0.7.2"
protocol = { path = "../protocol" }
tracing = "0.1"
tracing-subscriber = "0.3.22"
